--- a/project_final/front/product_page/outer3.html
+++ b/project_final/front/product_page/outer3.html
@@ -94,7 +94,7 @@
         <div class="col-md-7">
           <div class="card shadow-sm">
             <div class="card-body">
-              <h5 class="card-title">남성용 시그니쳐 S나염 데님자켓 청자켓</h5>
+              <h5 class="card-title">시그니쳐 데님 청자켓</h5>
               <h5 class="card-title pt-3 pb-3 border-top">42,800원</h5>
               <p class="card-text border-top pt-3 ">
                 <span class="badge bg-dark">상의</span>
