--- a/project_final/front/product_page/outer5.html
+++ b/project_final/front/product_page/outer5.html
@@ -94,7 +94,7 @@
                 <div class="col-md-7">
                     <div class="card shadow-sm">
                         <div class="card-body">
-                            <h5 class="card-title">남성용 간절기 아우터 남자 가디건</h5>
+                            <h5 class="card-title">남성용 베이지 가디건</h5>
                             <h5 class="card-title pt-3 pb-3 border-top">48,800원</h5>
                             <p class="card-text border-top pt-3 ">
                                 <span class="badge bg-dark">상의</span>
