--- a/project_final/front/product_page/outer4.html
+++ b/project_final/front/product_page/outer4.html
@@ -94,7 +94,7 @@
         <div class="col-md-7">
           <div class="card shadow-sm">
             <div class="card-body">
-              <h5 class="card-title">남성용 매일 댄디 코튼 싱글자켓</h5>
+              <h5 class="card-title">남성용 댄디 코튼 싱클자켓</h5>
               <h5 class="card-title pt-3 pb-3 border-top">127,800원</h5>
               <p class="card-text border-top pt-3 ">
                 <span class="badge bg-dark">상의</span>
