--- a/project_final/front/index.html
+++ b/project_final/front/index.html
@@ -123,7 +123,7 @@
     </nav>
   </header>
 
-  <!--슬라이드-->
+  <!--캐러셀 슬라이드-->
   <section id="frontCarousel" class="container-xxl carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#frontCarousel" data-bs-slide-to="0" class="active" aria-current="true"
@@ -142,8 +142,6 @@
         style="background-image: url('https://dakuang.co.kr/web/product/medium/202306/7fa0ae22c66cc718d2b8dae9ba18f384.jpg')">
         <div class="carousel-overlay text-white d-flex justify-content-center align-items-center">
           <div class="carousel-text text-center px-md-5">
-            <h1 class="carousel-title display-4"></h1>
-            <h3 class="carousel-subtitle">
             </h3>
           </div>
         </div>
@@ -152,17 +150,17 @@
         style="background-image: url('https://dakuang.co.kr/web/product/medium/202303/961bea80ecafaabd8e9ab1b702dd7f30.jpg')">
         <div class="carousel-overlay text-white d-flex justify-content-center align-items-center">
           <div class="carousel-text text-center px-md-5">
-            <h1 class="carousel-title display-4"></h1>
-            <h3 class="carousel-subtitle">
             </h3>
           </div>
         </div>
       </div>
     </div>
+    <!--이전 슬라이드-->
     <button class="carousel-control-prev" type="button" data-bs-target="#frontCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
+    <!--다음 슬라이드-->
     <button class="carousel-control-next" type="button" data-bs-target="#frontCarousel" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
@@ -178,7 +176,7 @@
             <h3 class="mb-3">BEST</h3>
             <br />
             <div class="row justify-content-center px2">
-              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4">
+              <div class="col-lg-3 cdol-m-4 col-sm-6 mb-4"> <!--반응형 그리드-->
                 <div class="program-item bg-white border p-2 shadow-box">
                   <a href="product_page/outer1.html" class="text-decoration-none">
                     <p class="mb-0">OUTER</p>
